--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,6 @@
 	</div>
 	
 	<div data-role="content" class="home">
-	    <h1 class="brandTagLine">Revision on the move</h1>
 	    <div class="buttonsWrapper">
 			<fieldset data-role="controlgroup"  class="continueButton">
                 <a href="#Login" data-role="button" data-theme="e" style="<%= buttonStyle %>">Sign In Or Register</a>
@@ -328,14 +327,43 @@
         <div data-role="content">
             <div data-role="fieldcontain">
                 <div id="container">
-                    <div class="buddy" style="display: block;"><div class="avatar" style="display: block; background-image: url(http://1.bp.blogspot.com/_qEbjiFbQWGM/TCBVlN3mkYI/AAAAAAAADCM/7CjYqUHwbgY/s1600/workshop_modell_0126.jpg)"></div></div>
-                    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://static.stylemagazin.hu/medias/29280/Nem-ehezik-a-Women-of-the-Year-legjobb-modell-dijara-eselyes-szepseg_32fc7c86954a8847610499a0fc7261e2.jpg)"></div></div>
-                    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://w1nd.cc/promo/347.jpg)"></div></div>
-                    <div class="buddy"><div class="avatar" style="display: block; background-image: url(http://static.168ora.hu/db/09/AF/orban-d0001C9AFa1ba9618c180.jpg)"></div></div>
+                    <div class="buddy" style="display: block;">
+                    <div class="avatar" style="display: block; background-image: url(http://1.bp.blogspot.com/_qEbjiFbQWGM/TCBVlN3mkYI/AAAAAAAADCM/7CjYqUHwbgY/s1600/workshop_modell_0126.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://static.stylemagazin.hu/medias/29280/Nem-ehezik-a-Women-of-the-Year-legjobb-modell-dijara-eselyes-szepseg_32fc7c86954a8847610499a0fc7261e2.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://w1nd.cc/promo/347.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://static.168ora.hu/db/09/AF/orban-d0001C9AFa1ba9618c180.jpg)">
+                        </div>
+                    </div>
                 </div>
                 <br />
             </div>
-            <button id="searchDoctor" data-theme="e" data-icon="alert">View</button>
+            <button id="viewSavedList" data-theme="e" data-icon="alert">View</button>
+        </div>
+    </script>
+
+    <!-- search Doctor List View -->
+    <script type="text/template" id="SearchDoctorListTemplate">
+        <div data-role="header">
+            <a href="#" class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
+            <h1>Locum Search Result</h1>
+        </div>
+        <div data-role="content">
+            <div data-role="fieldcontain">
+                <div id="container">
+                 
+                </div>
+                <br />
+            </div>
+            <button id="viewSavedList" data-theme="e" data-icon="alert">View</button>
         </div>
     </script>
 	
@@ -1103,22 +1131,25 @@
 		        $(this).addClass('rotate-left').delay(700).fadeOut(1);
 		        $('.buddy').find('.status').remove();
 
-		        $(this).append('<div class="status like">Like!</div>');
+		        $(this).append('<div class="status like">Save!</div>');
 		        if ($(this).is(':last-child')) {
 		            $('.buddy:nth-child(1)').removeClass('rotate-left rotate-right').fadeIn(300);
 		        } else {
 		            $(this).next().removeClass('rotate-left rotate-right').fadeIn(400);
 		        }
+
+
+
 		    });
 
 		    $(".buddy").on("swipeleft", function () {
 		        $(this).addClass('rotate-right').delay(700).fadeOut(1);
 		        $('.buddy').find('.status').remove();
-		        $(this).append('<div class="status dislike">Dislike!</div>');
+		        $(this).append('<div class="status dislike">Discard!</div>');
 
 		        if ($(this).is(':last-child')) {
 		            $('.buddy:nth-child(1)').removeClass('rotate-left rotate-right').fadeIn(300);
-		            alert('Oops...No more matches. Check back later!');
+		            alert('No more matches. Check back later!');
 		        } else {
 		            $(this).next().removeClass('rotate-left rotate-right').fadeIn(400);
 		        }
