--- a/www/index.html
+++ b/www/index.html
@@ -217,7 +217,6 @@
                 </fieldset>
                 <br />
                 <button id="login-button" data-theme="e" data-icon="arrow-r">Register</button>
-                <button id="login-button" data-theme="e" data-icon="arrow-r">Next Step</button>
             </div>
             <br />
         </div>
@@ -325,22 +324,76 @@
             <h1>Locum Search Result</h1>
         </div>
         <div data-role="content">
-            <div data-role="fieldcontain">
+            <div data-role="fieldcontain" style="<%= doctorStyle %>">
                 <div id="container">
                     <div class="buddy" style="display: block;">
-                    <div class="avatar" style="display: block; background-image: url(http://1.bp.blogspot.com/_qEbjiFbQWGM/TCBVlN3mkYI/AAAAAAAADCM/7CjYqUHwbgY/s1600/workshop_modell_0126.jpg)">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/doctors/AdrianHarris.jpg)">
                         </div>
                     </div>
                     <div class="buddy">
-                        <div class="avatar" style="display: block; background-image: url(http://static.stylemagazin.hu/medias/29280/Nem-ehezik-a-Women-of-the-Year-legjobb-modell-dijara-eselyes-szepseg_32fc7c86954a8847610499a0fc7261e2.jpg)">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/doctors/AlexWalkinshaw.png)">
                         </div>
                     </div>
                     <div class="buddy">
-                        <div class="avatar" style="display: block; background-image: url(http://w1nd.cc/promo/347.jpg)">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/doctors/CarolineWebster.jpg)">
                         </div>
                     </div>
                     <div class="buddy">
-                        <div class="avatar" style="display: block; background-image: url(http://static.168ora.hu/db/09/AF/orban-d0001C9AFa1ba9618c180.jpg)">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/doctors/ChrisColquhoun.png)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/doctors/DerekThompson.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/doctors/EllieBeaven.jpeg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/doctors/ElyesGabel.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/doctors/Harris.jpg)">
+                        </div>
+                    </div>
+                </div>
+                <br />
+            </div>
+
+            <div data-role="fieldcontain" style="<%= hospitalStyle %>">
+                <div id="container">
+                    <div class="buddy" style="display: block;">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/hospitals/BCH.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/hospitals/BWH.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/hospitals/GOSH.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/hospitals/HEART_Logo.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/hospitals/HOE.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/hospitals/middlesex-logo.png)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/hospitals/QEH.jpg)">
+                        </div>
+                    </div>
+                    <div class="buddy">
+                        <div class="avatar" style="display: block; background-image: url(http://172.24.10.113:8080/img/hospitals/WHH.png)">
                         </div>
                     </div>
                 </div>
@@ -1122,7 +1175,7 @@
 
 			swipe();
 
-			alert(demoUsers[0].id);
+
 		}
 
 		function swipe() {
