--- a/www/index.html
+++ b/www/index.html
@@ -139,14 +139,12 @@
         </div>
         <div data-role="content">
             <div data-role="fieldcontain" class="ui-body">
-                    <div class="buddy" style="display: block;">
-                        <div class="avatar" style="display: block; background-image: url(http://pupfish01.internal.bmjgroup.com:8080/locumservice/img/hospitals/BCH.jpg)">
-                        </div>
+                <% _(searchedResult).each(function(searchRow, index) { %>
+                <div class="buddy" <% if (index == showUserIndex){ %> style="display: block;" <% } %>>
+                    <div class="avatar" style="display: block; background-image: url('<%= searchRow.url %>')">
                     </div>
-                    <div class="buddy">
-                        <div class="avatar" style="display: block; background-image: url(http://pupfish01.internal.bmjgroup.com:8080/locumservice/img/hospitals/BWH.jpg)">
-                        </div>
-                    </div>
+                </div>
+                <% }); %>
                 <br />
             </div>
             <button id="viewSavedList" data-theme="e" data-icon="alert">View</button>
