--- a/www/index.html
+++ b/www/index.html
@@ -127,7 +127,12 @@
                 </div>
                 <br />
             </div>
+            <div class="clear"></div>
+            <div class="webLink">
+                <a onclick="window.open('', '_system');">Find out more about Locum.</a>
+            </div>
         </div>
+
     </script>
 
 
@@ -141,15 +146,76 @@
             <div data-role="fieldcontain" class="ui-body">
                 <% _(searchedResult).each(function(searchRow, index) { %>
                 <div class="buddy" <% if (index == showUserIndex){ %> style="display: block;" <% } %>>
-                    <div class="avatar" style="display: block; background-image: url('<%= searchRow.url %>')">
+                    <div class="avatar" style="display: block; background-image: url('<%=searchRow.url%>')">
+                        <div data-role="content" >
+                            <div >
+                                <h1 class="questionHeading"><%=searchRow.name %></h1>
+                            </div>
+                            <div class="ui-grid-b" style="padding-top:15px; padding-bottom:15px; padding-left:5px; padding-right:5px;">
+                                <table class="alphaList">
+                                    <tbody>
+                                        <tr><th>Grade: </th><td><%=searchRow.grade%></td></tr>
+                                        <tr><th>Specialty: </th><td><%=searchRow.specialty%></td></tr>
+                                        <tr><th>Tel: </th><td><%=searchRow.tel%></td></tr>
+                                        <tr><th>Postcode: </th><td><%=searchRow.postcode%></td></tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <% }); %>
                 <br />
+                <button id="viewSavedList" data-theme="e" data-icon="alert">View Saved List</button>
             </div>
-            <button id="viewSavedList" data-theme="e" data-icon="alert">View</button>
+
+        </div>
+        <div class="clear"></div>
+        <div class="webLink">
+            <a onclick="window.open('', '_system');">Find out more about Locum.</a>
         </div>
 
+    </script>
+
+    <!-- saved List View -->
+    <script type="text/template" id="SavedListTemplate">
+        <div data-role="header">
+            <a href="#" class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
+            <h1>Saved Search Result</h1>
+        </div>
+        <div data-role="content" class="questionPage ui-content">
+
+                <div id="container" class="question">
+                    <table class="alphaList">
+                        <tbody>
+                            <tr>
+                                <th>Name </th>
+                                <th>Grade </th>
+                                <th>Specialty </th>
+                                <th>Tel </th>
+                                <th>Postcode</th>
+                            </tr>
+                            <% _(savedResult).each(function(savedRow, index) { %>
+                            <tr>
+                                <td><%=savedRow.name %></td>
+                                <td><%=savedRow.grade %> </td>
+                                <td><%=savedRow.specialty %> </td>
+                                <td><%=savedRow.tel %> </td>
+                                <td><%=savedRow.postcode %></td>
+                            </tr>
+                            <% }); %>
+                        </tbody>
+                    </table>
+                </div>
+                <br />
+
+            <button id="viewSavedList" data-theme="e" data-icon="alert">Send Email</button>
+
+            <div class="clear"></div>
+            <div class="webLink">
+                <a onclick="window.open('', '_system');">Find out more about Locum.</a>
+            </div>
+        </div>
 
     </script>
 		
