--- a/www/index.html
+++ b/www/index.html
@@ -30,8 +30,10 @@
                 <a href="#Login" data-role="button" data-theme="e" style="<%= buttonStyle %>">Sign In Or Register</a>
 			</fieldset>
 			<fieldset data-role="controlgroup" class="optionButtons">
-			    <a href="#Settings" data-role="button" data-icon="gear" data-iconpos="left" data-theme="e">My Profile</a>
-			    <a href="#GettingStarted" data-role="button" data-icon="info" data-iconpos="left" data-theme="e">Information</a>
+                <a href="#<%= searchPath %>" data-role="button" data-icon="gear" data-iconpos="left" data-theme="e">Search</a>
+                <a href="#Matcher" data-role="button" data-icon="gear" data-iconpos="left" data-theme="e">Matcher</a>
+			    <a href="#Profile" data-role="button" data-icon="gear" data-iconpos="left" data-theme="e">My Profile</a>
+			    <a href="#GettingStarted" data-role="button" data-icon="info" data-iconpos="left" data-theme="e">Getting Start</a>
 			</fieldset>
 	    </div>
 	    <div class="mainImage">
@@ -45,7 +47,123 @@
 		<div id="mainmenu"></div>
 	</div>
     </script>
+
+    <!-- Matcher -->
+    <script type="text/template" id="MatcherTemplate">
+        <div data-role="header">
+            <a href="#" class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
+            <h1>Matcher</h1>
+        </div>
+        <div data-role="content" class="questionPage ui-content">
+
+            <div id="container" class="question">
+                <table class="alphaList">
+                    <tbody>
+                        <tr>
+                            <th>Name </th>
+                            <th>Tel </th>
+                            <th>Postcode</th>
+                            <th>Status</th>
+                        </tr>
+                        <% _(savedResult).each(function(savedRow, index) { %>
+                        <tr>
+                            <td><%=savedRow.name %></td>
+                            <td><%=savedRow.tel %> </td>
+                            <td><%=savedRow.postcode %></td>
+                            <td></td>
+                        </tr>
+                        <% }); %>
+                    </tbody>
+                </table>
+            </div>
+            <br />
+
+            <button id="viewSavedList" data-theme="e" data-icon="alert">Send Email</button>
+
+            <div class="clear"></div>
+            <div class="webLink">
+                <a onclick="window.open('', '_system');">Find out more about Locum.</a>
+            </div>
+        </div>
+
+    </script>
 	
+    <!-- Profile -->
+    <script type="text/template" id="ProfileTemplate">
+        <div data-role="header">
+            <a href='#' class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
+            <h1>My Profile</h1>
+        </div>
+
+        <div data-role="content" class="settings">
+
+            <h1 class="pageHeading">Account</h1>
+            <div class="ui-hide-label">
+                <fieldset data-role="controlgroup">
+                    <label for="email">User name</label>
+                    <input id="email" placeholder="User name" value="<%= email %>"  class="marginBottom" />
+                    <label for="password">Password</label>
+                    <input id="password" placeholder="change password" value="" type="password" />
+                </fieldset>
+
+            </div>
+
+            <fieldset data-role="controlgroup">
+                <h1 class="pageHeading">Professional</h1>
+                <label for="speciality">Speciality</label>
+                <select name="speciality" data-theme="e" id="speciality">
+                    <option value="Cardiology">
+                        Cardiology
+                    </option>
+                    <option value="Respiratory">
+                        Respiratory
+                    </option>
+                    <option value="Accident Emergency">
+                        Accident Emergency
+                    </option>
+                </select>
+                <select name="grade" data-theme="e" id="grade">
+                    <option value="Foundation Year 2">
+                        Foundation Year 2
+                    </option>
+                    <option value="Registrar">
+                        Registrar
+                    </option>
+                    <option value="Consultant">
+                        Consultant
+                    </option>
+                </select>
+            </fieldset>
+
+
+            <div class="">
+                <h4></h4>
+                <button id="save" data-theme="e" data-icon="alert">Save</button>
+            </div>
+            <br />
+            <div class="hr"><hr /></div>
+            <div class="appInfo">
+            </div>
+
+            <br /><br />
+
+            <div class="webLink">
+                <a onclick="window.open('', '_system');">Find out more about Locum.</a>
+            </div>
+
+        </div>
+    </script>
+
+    <!-- Getting Started -->
+    <script type="text/template" id="GettingStartedTemplate">
+        <div data-role="header">
+            <a href='#' class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
+            <h1>About us</h1>
+        </div>
+        <div data-role="content" class="gettingStarted">
+        </div>
+    </script>
+
     <!-- Login -->
     <script type="text/template" id="LoginTemplate">
         <div data-role="header">
@@ -138,6 +256,97 @@
 
     <!-- search Hospital Result View -->
     <script type="text/template" id="SearchHospitalResultTemplate">
+        <div data-role="header">
+            <a href="#" class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
+            <h1>Locum Search Result</h1>
+        </div>
+        <div data-role="content">
+            <div data-role="fieldcontain" class="ui-body">
+                <% _(searchedResult).each(function(searchRow, index) { %>
+                <div class="buddy" <% if (index == showUserIndex){ %> style="display: block;" <% } %>>
+                    <div class="avatar" style="display: block; background-image: url('<%=searchRow.url%>')">
+                        <div data-role="content" >
+                            <div >
+                                <h1 class="questionHeading"><%=searchRow.name %></h1>
+                            </div>
+                            <div class="ui-grid-b" style="padding-top:15px; padding-bottom:15px; padding-left:5px; padding-right:5px;">
+                                <table class="alphaList">
+                                    <tbody>
+                                        <tr><th>Grade: </th><td><%=searchRow.grade%></td></tr>
+                                        <tr><th>Specialty: </th><td><%=searchRow.specialty%></td></tr>
+                                        <tr><th>Tel: </th><td><%=searchRow.tel%></td></tr>
+                                        <tr><th>Postcode: </th><td><%=searchRow.postcode%></td></tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <% }); %>
+                <br />
+                <button id="viewSavedList" data-theme="e" data-icon="alert">View Saved List</button>
+            </div>
+
+        </div>
+        <div class="clear"></div>
+        <div class="webLink">
+            <a onclick="window.open('', '_system');">Find out more about Locum.</a>
+        </div>
+
+    </script>
+
+    <!-- search For Doctor View -->
+    <script type="text/template" id="SearchForDoctorTemplate">
+        <div data-role="header">
+            <a href="#" class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
+            <h1>Locum Search</h1>
+        </div>
+        <div data-role="content">
+            <div data-role="fieldcontain">
+                <h1 class="pageHeading">Who are you looking for today?</h1>
+                <div class="ui-hide-label">
+                    <fieldset data-role="controlgroup">
+                        <label for="grades">questionLimit</label>
+                        <select name="grades" data-theme="e" id="grades">
+                            <option value="ALL">All Grades</option>
+                            <% _(grades).each(function(grade) { %>
+                            <option value="<%= grade.id %>"><%= grade.fullName %></option>
+                            <% }); %>
+                        </select>
+
+                        <label for="speciality">Speciality</label>
+                        <select name="speciality" data-theme="e" id="speciality">
+                            <option value="ALL">All Specialities</option>
+                            <% _(specialities).each(function(speciality) { %>
+                            <option value="<%= speciality.id %>"><%= speciality.fullName %></option>
+                            <% }); %>
+                        </select>
+                        <div id="locationSliderGroup" style="">
+                            <div class="sliderWrapper">
+                                <span class="diffEasy">10 miles</span><span class="diffHard">50 miles</span>
+                                <input type="range" name="slider" data-theme="e" data-track-theme="a" id="locationRange" value="20" min="10" max="50" data-highlight="true" class="ui-hidden-accessible diffSlider"
+                                       onchange="" />
+                            </div>
+                        </div>
+                    </fieldset>
+                    <br />
+                    <button id="searchDoctor" data-theme="e" data-icon="arrow-r">
+                        Search
+                    </button>
+                </div>
+                <br />
+            </div>
+            <div class="clear"></div>
+            <div class="webLink">
+                <a onclick="window.open('', '_system');">Find out more about Locum.</a>
+            </div>
+        </div>
+
+    </script>
+
+
+    <!-- search Doctor Result View -->
+    <script type="text/template" id="SearchDoctorResultTemplate">
         <div data-role="header">
             <a href="#" class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
             <h1>Locum Search Result</h1>
