--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="css/oe-custom.css" />
     
     <link rel="stylesheet" type="text/css" href="css/swipe.css">
+
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 	
 	
     <!-- Page Templates ========================================================================= -->
@@ -30,8 +32,8 @@
                 <a href="#Login" data-role="button" data-theme="e" style="<%= buttonStyle %>">Sign In Or Register</a>
 			</fieldset>
 			<fieldset data-role="controlgroup" class="optionButtons">
-                <a href="#<%= searchPath %>" data-role="button" data-icon="gear" data-iconpos="left" data-theme="e">Search</a>
-                <a href="#Matcher" data-role="button" data-icon="gear" data-iconpos="left" data-theme="e">Matcher</a>
+                <a href="#<%= searchPath %>" data-role="button" data-icon="arrow-r" data-iconpos="left" data-theme="e">Search</a>
+                <a href="#Matcher" data-role="button" data-icon="alert" data-iconpos="left" data-theme="e">Matcher</a>
 			    <a href="#Profile" data-role="button" data-icon="gear" data-iconpos="left" data-theme="e">My Profile</a>
 			    <a href="#GettingStarted" data-role="button" data-icon="info" data-iconpos="left" data-theme="e">Getting Start</a>
 			</fieldset>
@@ -175,22 +177,20 @@
             <div class="ui-hide-label">
                 <fieldset data-role="controlgroup">
                     <label for="email">User name</label>
-                    <input id="email" placeholder="User name" value="stephen" type="email" class="marginBottom" />
+                    <input id="email" placeholder="User name" value="ravinder" type="email" class="marginBottom" />
                     <label for="password">Password</label>
                     <input id="password" placeholder="password" value="123" type="password" />
                 </fieldset>
 
-                <br />
                 <button id="login-button" data-theme="e" data-icon="arrow-r">Sign In</button>
             </div>
-            <br />
 
             <div class="hr"><hr /></div>
 
 
             <div style="<%= registerStyle %>">
                 <div>
-                    <h4>Don't have a Locum account?</h4>
+                    <p class="pageHeading">Don&#39;t have a Locum account?</p>
                 </div>
                 <fieldset data-role="controlgroup">
                     <a href='#Register' data-role="button" data-theme="e">Register now</a>
@@ -212,7 +212,7 @@
         </div>
         <div data-role="content">
             <div data-role="fieldcontain">
-                <h1 class="pageHeading">Who are you looking for today?</h1>
+                <h1 class="pageHeading">Looking for hospitals</h1>
                 <div class="ui-hide-label">
                     <fieldset data-role="controlgroup">
                         <label for="grades">questionLimit</label>
@@ -258,26 +258,28 @@
     <script type="text/template" id="SearchHospitalResultTemplate">
         <div data-role="header">
             <a href="#" class="homeButton" data-role="button" data-icon="home" data-mini="true">Home</a>
-            <h1>Locum Search Result</h1>
+            <h1>Locum Search Results</h1>
         </div>
         <div data-role="content">
             <div data-role="fieldcontain" class="ui-body">
                 <% _(searchedResult).each(function(searchRow, index) { %>
-                <div class="buddy" <% if (index == showUserIndex){ %> style="display: block;" <% } %>>
-                    <div class="avatar" style="display: block; background-image: url('<%=searchRow.url%>')">
-                        <div data-role="content" >
-                            <div >
-                                <h1 class="questionHeading"><%=searchRow.name %></h1>
-                            </div>
-                            <div class="ui-grid-b" style="padding-top:15px; padding-bottom:15px; padding-left:5px; padding-right:5px;">
-                                <table class="alphaList">
-                                    <tbody>
-                                        <tr><th>Grade: </th><td><%=searchRow.grade%></td></tr>
-                                        <tr><th>Specialty: </th><td><%=searchRow.specialty%></td></tr>
-                                        <tr><th>Tel: </th><td><%=searchRow.tel%></td></tr>
-                                        <tr><th>Postcode: </th><td><%=searchRow.postcode%></td></tr>
-                                    </tbody>
-                                </table>
+                <div class="buddy" <% if (index == showUserIndex){ %> style="display: block;" <% } %> >
+                    
+                    <div class="avatar" style="display:block; background-color:#fff; height:300px; background-image: url('<%=searchRow.url%>');">
+
+                        <div data-role="content" style="padding-top:170px;">
+                            <h1 class="questionHeading"><%=searchRow.name %></h1>                       
+                            <div class="search-results-user-info">
+                                <div class="column-left">
+                                    <p>Grade:</p>
+                                    <p>Specialty:</p>
+                                    <p>Telephone:</p>
+                                </div>
+                                <div class="column-right">
+                                    <p><%=searchRow.grade%></p>
+                                    <p><%=searchRow.specialty%></p>
+                                    <p><%=searchRow.postcode%></p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -303,7 +305,7 @@
         </div>
         <div data-role="content">
             <div data-role="fieldcontain">
-                <h1 class="pageHeading">Who are you looking for today?</h1>
+                <h1 class="pageHeading">Looking for doctors</h1>
                 <div class="ui-hide-label">
                     <fieldset data-role="controlgroup">
                         <label for="grades">questionLimit</label>
@@ -399,16 +401,12 @@
                         <tbody>
                             <tr>
                                 <th>Name </th>
-                                <th>Grade </th>
-                                <th>Specialty </th>
                                 <th>Tel </th>
                                 <th>Postcode</th>
                             </tr>
                             <% _(savedResult).each(function(savedRow, index) { %>
                             <tr>
                                 <td><%=savedRow.name %></td>
-                                <td><%=savedRow.grade %> </td>
-                                <td><%=savedRow.specialty %> </td>
                                 <td><%=savedRow.tel %> </td>
                                 <td><%=savedRow.postcode %></td>
                             </tr>
