changed references to backbone.js and underscore.js to use local

--- a/www/index.html
+++ b/www/index.html
@@ -483,8 +483,10 @@
     <script src="lib/jquery-1.8.2.min.js"></script>
     <script src="js/jqm-config.js"></script>
     <script src="lib/jquery.mobile-1.2.0.min.js"></script>
-    <script src="http://underscorejs.org/underscore.js"></script>
-    <script src="http://backbonejs.org/backbone.js"></script>    
+<!--     <script src="http://underscorejs.org/underscore.js"></script> -->
+    <script src="lib/underscore-min.js"></script>
+<!--     <script src="http://backbonejs.org/backbone.js"></script>     -->
+    <script src="lib/backbone-min.js"></script>    
     <script src="lib/jquery.imagesloaded.min.js" type="text/javascript"></script>	
 	
     <script language="javascript" type="text/javascript" src="lib/jquery.flot.js"></script>
